--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,9 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="pl.axxxon"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="1.0"
+        >
     <uses-sdk android:minSdkVersion="7"/>
-    <application android:label="@string/app_name">
+    <application android:label="@string/app_name"
+                 android:icon="@drawable/ic_launcher"
+            >
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
